# coding-standards

cookiecutters/: Makefile  README.md
cookiecutters/django/: cookiecutter.json
cookiecutters/django/{{cookiecutter.project_slug}}/: .dockerignore  Makefile  Pipfile  manage.py  package.json
cookiecutters/django/{{cookiecutter.project_slug}}/tests/: test_pytest_style.py
cookiecutters/django/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
cookiecutters/pipenv/{{cookiecutter.project_slug}}/: Pipfile  README.md
cookiecutters/poetry/{{cookiecutter.project_slug}}/: pyproject.toml
cookiecutters/poetry/{{cookiecutter.project_slug}}/tests/: test_unittest_style.py
cookiecutters/poetry/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  _version.py
cookiecutters/requirements_txt/: cookiecutter.json
cookiecutters/requirements_txt/{{cookiecutter.project_slug}}/: Dockerfile  Makefile  requirements.txt  setup.py
cookiecutters/requirements_txt/{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: _version.py
