[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = []
keywords = []
classifiers = [
]
include = [
    "{{cookiecutter.project_slug}}/**/*.py",
    "{{cookiecutter.project_slug}}/**/*.md",
    "{{cookiecutter.project_slug}}/**/*.txt",
    "{{cookiecutter.project_slug}}/**/*.html",
]
exclude = [
]
license = "CC0 1.0 Public Domain"
readme = "README.md"
repository = ""
homepage = ""
documentation =""

[tool.poetry.urls]
"Bug Tracker" = ""
"Change Log" = ""

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
black = "==20.8b1"
isort = "*"
flake8 = "*"
flake8-assertive = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-logging-format = "*"
flake8-bugbear = "*"
flake8-eradicate = "*"
bandit = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
